# SysY-Compiler

./: .gitignore  CMakeLists.txt  main.cpp  readme.md
ast/: BNF.txt  ast.cpp  ast.h  ast.hpp  lexer.l  parser.y
backend/: gen.cpp  gen.hpp  symbolTable.cpp  symbolTable.hpp
example/course_selection/: a.out  course_selection.c  course_selection_compile.sh
example/matrix/: matrix  matrix.c  matrix_compile.sh
example/quicksort/: quicksort.c  quicksort_compile.sh
frontend/: BNF.txt  ast.cpp  ast.hpp  lexer.l  macro.cpp  macro.hpp  myScanner.hpp  parser.y
